implement filter by price
