# myapp/stadium/request.py
@@ -4,6 +4,7 @@ from rest_framework import serializers
 class ListStadiumSerializer(serializers.Serializer):
     time_from = serializers.IntegerField(required=True)
     time_to = serializers.IntegerField(required=True)
-    price = serializers.IntegerField(required=False)
+    max_price = serializers.IntegerField(required=False)
+    min_price = serializers.IntegerField(required=False)
     result_limit = serializers.IntegerField(required=False)
     page = serializers.IntegerField(required=False)
